Payment card syntax error fixed

--- a/NovoePokolenie/Views/Payment/PaymentStudentCard.cshtml
+++ b/NovoePokolenie/Views/Payment/PaymentStudentCard.cshtml
@@ -131,9 +131,7 @@
     </tr>
 </table>
 </div>
-<div id="payments-container" class="fb-30">
-
-</div>
+<div id="payments-container" class="fb-30"></div>
 </div>
 <script>
 
