--- a/NovoePokolenie/Views/Shared/_Layout.cshtml
+++ b/NovoePokolenie/Views/Shared/_Layout.cshtml
@@ -1,28 +1,163 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Identity
+@inject UserManager<NPUser> _userManager
+@{
+    var user = await _userManager.GetUserAsync(User);
+    var avatar = user.AvatarLink is null ? "../img/avatar.png" : "../img/" + user.AvatarLink;
+}
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Новое Поколение</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/style.css" />
-    <link rel="stylesheet" href="~/css/site.css" />
-    <script src="https://kit.fontawesome.com/e3b692d36d.js" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <title>Преподаватель - Новое Поколение</title>
+    <link rel="stylesheet" href="~/css/mentor_style.css" />
+    <script src="https://code.jquery.com/jquery-3.5.0.min.js"
+            integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/6dbfe71658.js" crossorigin="anonymous"></script>
+
 </head>
+
 <body>
-   @* @{
+    @{
         if (!User.Identity.IsAuthenticated) Context.Response.Redirect(Url.Action("SessionExpired", "Account"));
-    }*@
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
-    </div>
+    }
+    <header class="flex flex-between">
+        <div class="menu-toggle-button flex flex-center">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M5 3l3-3 12 12-12 12-3-3 9-9z" /></svg>
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M5 3l3-3 12 12-12 12-3-3 9-9z" /></svg>
+        </div>
+        <div class="info-block flex flex-acenter">
+            <p class="datetime flex flex-list text-right">
+                <span id="date"></span>
+                <span id="time"></span>
+            </p>
+            <img class="avatar-image" src="@avatar">
+        </div>
+    </header>
+    <aside class="navigation">
+        <nav>
+            <ul class="nav-list flex-list">
+            @if(User.IsInRole("Mentor"))
+            {
+                 <li class="nav-item">
+                    <a asp-action="AttendanceMenu" asp-controller="Mentor" class="icon-link">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M20 12.875v5.068c0 2.754-5.789 4.057-9 4.057-3.052 0-9-1.392-9-4.057v-6.294l9 4.863 9-3.637zm-8.083-10.875l-12.917 5.75 12 6.5 11-4.417v7.167h2v-8.25l-12.083-6.75zm13.083 20h-4c.578-1 1-2.5 1-4h2c0 1.516.391 2.859 1 4z" /></svg>
+                        <span class="hidden-span"><span>Урок и посещения</span></span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a asp-action="Index" asp-controller="Project" class="icon-link">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M22 13v-13h-20v24h8.409c4.857 0 3.335-8 3.335-8 3.009.745 8.256.419 8.256-3zm-4-7h-12v-1h12v1zm0 3h-12v-1h12v1zm0 3h-12v-1h12v1zm-2.091 6.223c2.047.478 4.805-.279 6.091-1.179-1.494 1.998-5.23 5.708-7.432 6.881 1.156-1.168 1.563-4.234 1.341-5.702z" /></svg>
+                        <span class="hidden-span"><span>Планы и проекты</span></span>
+                    </a>
+                </li>   
+            }
+            else if(User.IsInRole("Manager"))
+            {
+                <li class="nav-item">
+                    <a asp-action="Branches" asp-controller="Manager" class="icon-link">
+                        <i class="fas fa-building"></i>
+                        <span class="hidden-span"><span>Филиалы</span></span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a asp-action="AttendanceMenu" asp-controller="Manager" class="icon-link">
+                        <i class="fas fa-history"></i>
+                        <span class="hidden-span"><span>Посещения</span></span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a asp-action="PaymentMenu" asp-controller="Manager" class="icon-link">
+                        <i class="fas fa-credit-card"></i>
+                        <span class="hidden-span"><span>Оплата</span></span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a asp-action="UsersMenu" asp-controller="Manager" class="icon-link">
+                        <i class="fas fa-users"></i>
+                        <span class="hidden-span"><span>Пользователи</span></span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a asp-action="AllUserMainPage" asp-controller="Account" class="icon-link">
+                       <i class="fas fa-search"></i>
+                        <span class="hidden-span"><span>Поиск</span></span>
+                    </a>
+                </li>
+            }
+            else if(User.IsInRole("Student"))
+            {
+                <li class="nav-item">
+                    <a asp-action="Lesson" asp-controller="Student" asp-route-studentId="@_userManager.GetUserId(User)" class="icon-link">
+                        <i class="fas fa-chalkboard-teacher"></i>
+                        <span class="hidden-span"><span>Урок</span></span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a asp-action="Payment" asp-controller="Payment" asp-route-studentId="@_userManager.GetUserId(User)" class="icon-link">
+                        <i class="far fa-credit-card"></i>
+                            <span class="hidden-span"><span>Оплата</span></span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a asp-action="StudentAttendance" asp-controller="Attendance" asp-route-studentId="@_userManager.GetUserId(User)" class="icon-link">
+                        <i class="far fa-calendar-check"></i>
+                            <span class="hidden-span"><span>Посещения</span></span>
+                    </a>
+                </li>
+            }
+                <li class="nav-item">
+                    <a asp-action="Settings" asp-controller="Account" class="icon-link">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M19 0h-14c-2.762 0-5 2.239-5 5v14c0 2.761 2.238 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-4 4h2v3h-2v-3zm-8 0h2v8h-2v-8zm4 13h-2v3h-2v-3h-2v-3h6v3zm8-5h-2v8h-2v-8h-2v-3h6v3z" /></svg>
+                        <span class="hidden-span"><span>Настройки</span></span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a asp-action="Logout" asp-controller="Account" class="icon-link">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M16 9v-4l8 7-8 7v-4h-8v-6h8zm-2 10v-.083c-1.178.685-2.542 1.083-4 1.083-4.411 0-8-3.589-8-8s3.589-8 8-8c1.458 0 2.822.398 4 1.083v-2.245c-1.226-.536-2.577-.838-4-.838-5.522 0-10 4.477-10 10s4.478 10 10 10c1.423 0 2.774-.302 4-.838v-2.162z" /></svg>
+                        <span class="hidden-span"><span>Выход</span></span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </aside>
+    <main class="content">
+        @RenderBody()
+    </main>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/lib/jquery-ajax-unobtrusive/dist/jquery.unobtrusive-ajax.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @RenderSection("Scripts", required: false)
+
+    <script>
+        var time = new Date();
+        var daysOfWeek = ['Воскресенье', 'Понедельник', 'Вторник', 'Среда', 'Четверг', 'Пятница', 'Суббота']
+        $(window).on('load', () => {
+            $('span#date').text(getDateString(time));
+            $('span#time').text(getTimeString(time));
+            setInterval(() => {
+                time = new Date();
+                $('span#time').text(getTimeString(time));
+            }, 1000)
+
+        });
+
+        $('.menu-toggle-button').on('click', (event) => {
+            $(event.currentTarget).toggleClass('menu-toggle-button-opened');
+            $('.navigation').toggleClass('navigation-opened')
+        });
+
+        $('.branchBlock-header').on('click', (event) => {
+            if (window.innerWidth < 600) {
+                let blocks = Array.from($(event.currentTarget).siblings())
+                blocks.forEach(block => {
+                    $(block).toggleClass('branchBlock-closed')
+                });
+            }
+        })
+    </script>
 </body>
+
 </html>
