Unused style files removed

--- a/NovoePokolenie/Views/Shared/_Layout.cshtml
+++ b/NovoePokolenie/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Преподаватель - Новое Поколение</title>
-    <link rel="stylesheet" href="~/css/mentor_style.css" />
+    <link rel="stylesheet" href="~/css/layout-style.css" />
     <script src="https://code.jquery.com/jquery-3.5.0.min.js"
             integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/6dbfe71658.js" crossorigin="anonymous"></script>
