--- a/NovoePokolenie/Views/Mentor/AttendanceMenu.cshtml
+++ b/NovoePokolenie/Views/Mentor/AttendanceMenu.cshtml
@@ -4,7 +4,7 @@
 @using NovoePokolenie.Helpers;
 
 @{
-    Layout = "~/Views/Shared/_MentorLayout.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
     DateTime now = DateTime.Now;
 }
 
