--- a/NovoePokolenie/Views/Shared/_Layout.cshtml
+++ b/NovoePokolenie/Views/Shared/_Layout.cshtml
@@ -20,6 +20,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@roleTitle - Новое Поколение</title>
     <link rel="stylesheet" href="~/css/layout-style.css" />
+    @if (User.IsInRole("Mentor"))
+    {
+        <link rel="stylesheet" href="~/css/mentor-temp-style.css" />
+    }
     <script src="https://code.jquery.com/jquery-3.5.0.min.js"
             integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/6dbfe71658.js" crossorigin="anonymous"></script>
@@ -49,7 +53,7 @@
             @if(User.IsInRole("Mentor"))
             {
                  <li class="nav-item">
-                    <a asp-action="AttendanceMenu" asp-controller="Mentor" class="icon-link">
+                    <a asp-action="AttendanceMenu" asp-controller="Attendance" class="icon-link">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M20 12.875v5.068c0 2.754-5.789 4.057-9 4.057-3.052 0-9-1.392-9-4.057v-6.294l9 4.863 9-3.637zm-8.083-10.875l-12.917 5.75 12 6.5 11-4.417v7.167h2v-8.25l-12.083-6.75zm13.083 20h-4c.578-1 1-2.5 1-4h2c0 1.516.391 2.859 1 4z" /></svg>
                         <span class="hidden-span"><span>Урок и посещения</span></span>
                     </a>
