--- a/NovoePokolenie/wwwroot/css/mentor-temp-style.css
+++ b/NovoePokolenie/wwwroot/css/mentor-temp-style.css
@@ -1,1 +1,70 @@
-﻿
+﻿.project-button {
+    display: block;
+    border: 2px solid #4E5478;
+    cursor: pointer;
+}
+
+.project-button:hover{
+    background-color: #4E5478;
+}
+.project-button:hover .project-button--icon{
+    stroke: #F4E0BE;
+}
+
+.project-button--icon{
+    width: 2rem;
+    stroke: #4E5478;
+}
+
+.project-link{
+    color: black;
+    text-decoration: none;
+}
+
+.project-link:hover{
+    text-decoration: 1px underline #4E5478;
+}
+
+.project-flex{
+    gap: 1rem;
+    justify-content: center;
+}
+
+.project-index-container{
+    max-width: 70vw;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    margin: 2rem auto;
+}
+
+.project-index-container .accent-header{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.5rem;
+    padding: 2rem 0;
+}
+
+.level-container{
+    border: 2px solid #4E5478;
+}
+
+.project-table{
+    width: 100%;
+    border-collapse: collapse;
+}
+
+.project-table td{
+    border-bottom: 2px solid #4E5478;
+    padding: 1rem 0;
+}
+
+.project-table td:first-child{
+    padding: 1rem 1rem;
+    width: 5%;
+}
+
+.project-table td:nth-child(2){
+    width: 70%;
+}
