Project switch view fixed

--- a/NovoePokolenie/Views/Account/MainPage.cshtml
+++ b/NovoePokolenie/Views/Account/MainPage.cshtml
@@ -24,19 +24,19 @@
                 string greeting = "";
                 if(hh>17 && hh<23)
                 {
-                    greeting = "Добрый вечер, ";
+                    greeting = "Добрый вечер!";
                 }
                 else if(hh>5 && hh<11) 
                 {
-                    greeting = "Доброе утро, ";
+                    greeting = "Доброе утро!";
                 }
                 else if(hh>10 && hh < 18)
                 {
-                    greeting = "Хорошего дня, ";
+                    greeting = "Хорошего дня!";
                 }
                 else
                 {
-                    greeting = "Спокойной ночи, ";
+                    greeting = "Спокойной ночи!";
                 }
                 greeting += user.FirstName + "!";
 
